# mailpoppy

./: .gitignore  CLAUDE.md  DESIGN.md  LICENSE  README.md  package-lock.json  package.json  phase0-derisk.md  tsconfig.base.json
apps/desktop/: README.md  RELEASE.md  extension.json  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/node-sidecar/: REPRODUCE.md  (+2 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/scripts/: make-icon.mjs
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/mobile/: App.tsx  CLAUDE.md  README.md  app.json  google-services.json  index.ts  metro.config.js  package-lock.json  package.json  tsconfig.json
apps/web/: apphosting.yaml  next.config.ts  package-lock.json  package.json
docs/: OPEN-vs-CLOSED.md  agent-onboarding-interview.md  agentspoppy-v1-spec.md  broker-product-brief.md  mailbox-encryption-design.md  mailpoppy-hub-design.md  master-plan.md  onboarding-two-personas.md  repo-split.md  web-session-brief.md
docs/drafts/: CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EULA.md  LICENSE  README.md  SECURITY.md  TRADEMARK.md  iam-least-privilege.md
infra/: cdk.json  package.json  tsconfig.json
infra/lib/: mail-stack.ts
infra/policies/: README.md  mailpoppy-deploy-policy.json  mailpoppy-deploy-role.yaml  mailpoppy-provisioning-policy.json  mailpoppy-provisioning-role.yaml
lambdas/: package.json  tsconfig.json
lambdas/src/: access-api.ts  inbound-processor.ts  janitor.ts  suppression.ts
(+257 files in other folders)
