[package]
name = "mailpoppy"
version = "0.1.0"
description = "Host email for your own domains inside your own AWS account."
edition = "2021"
rust-version = "1.77"

# The library is what the mobile entry point links against; the binary just calls run().
[lib]
name = "mailpoppy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
